--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
           <div class="row">
             <div class="col span_4 center">
-              <div class="site-photo"><img src="images/pritam1.png" width="250" height="250" alt="Photo" class="photo"></div>
+              <div class="site-photo"><img src="images/pritam2.png" width="250" height="250" alt="Photo" class="photo"></div>
             </div>
             <div class="col span_8">
               <h3 id="two">Some Facts About Me!</h3>
@@ -112,9 +112,9 @@
               <p>I love creating fun,very useful websites that are functional for everyday use.I'm a passionate developer who really enjoys learning new languages.Please take a look at my portfolio and don't hesitate to contact me if you think i can be your next good server. </p>
               <ul class="social-nav">
                 <!-- <li><a href="#"><i class="fa fa-behance"></i></a></li> -->
-                <li><a href="https://github.com/pritamshrestha"><i class="fa fa-github"></i></a></li>
-                <li><a href="https://codepen.io/pritamshrestha"><i class="fa fa-codepen"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/pritam-shrestha"><i class="fa fa-linkedin"></i></a></li>
+                <li><a href="https://github.com/pritamshrestha"><i class="fa fa-github">Github</i></a></li>
+                <li><a href="https://codepen.io/pritamshrestha"><i class="fa fa-codepen">Codepen</i></a></li>
+                <li><a href="https://www.linkedin.com/in/pritam-shrestha-91b909126"><i class="fa fa-linkedin">LinkedIn</i></a></li>
                 <!-- <li><a href="#"><i class="fa fa-flickr"></i></a></li> -->
                 <!-- <li><a href="#"><i class="fa fa-instagram"></i></a></li> -->
               </ul>
@@ -422,8 +422,8 @@ Developed test summary reports for the upper management.
             </blockquote>
             <blockquote>
               <p>It’s rare that you come across a stand out talent like Pritam. I am particularly impressed how quickly he takes on new challenges! His work is incredibly thorough and efficient. No matter how tight a deadline is, i know Pritam gets it done. He thinks outside of the box, is passionate and communicates effectively.</p>
-              <div class="author">narayan / Google</div>
-              <div class="site-photo"><img src="images/daji.jpg" width="70" height="70" alt=""></div>
+              <div class="author">Chris Brody/Co Founder & Lead Mentor at Codify Academy</div>
+              <div class="site-photo"><img src="images/chris.jpg" width="70" height="70" alt=""></div>
             </blockquote>
             <blockquote>
               <p>I've never met someone who's more addicted to coding than Pritam! he's not only fun to hang out with but the quality of her work is outstanding. No matter how late at night, Pritam doesn't stop until it's done. He is an inspiration to our students!</p>
@@ -490,7 +490,7 @@ Developed test summary reports for the upper management.
               </div>
               <div class="col span_4">
                 <div class="contacts-item">
-                  <div class="icon-b"><i class="fa fa-send"></i></div><a href="mailto:mail@yoursite.com" class="email">safal_pritam@hotmail.com</a>
+                  <div class="icon-b"><i class="fa fa-send"></i></div><a href="mailto:mail@yoursite.com" class="email">safal_pritam@hotmail.com or pritamitshrestha@gmail.com</a>
                 </div>
               </div>
             </div>
